[gd_scene load_steps=57 format=3 uid="uid://bc0uly0ha3jgc"]

[ext_resource type="Script" path="res://scripts/enemies/enemy_tiny.gd" id="1_fgdk2"]
[ext_resource type="Texture2D" uid="uid://ctx60d8h0kwnd" path="res://assets/enemies/Beeeg_Boi_Jump_Cycle2.png" id="2_k14k8"]
[ext_resource type="Texture2D" uid="uid://bcrs2bnf2pmb1" path="res://assets/enemies/Beeeg_Boi_Jump_Cycle.png" id="3_njl6j"]
[ext_resource type="Texture2D" uid="uid://c2nsjul18a7xv" path="res://assets/enemies/Lil_Gobbie_Wal_Cycle.png" id="4_6swk2"]
[ext_resource type="Texture2D" uid="uid://by68qx0gmp85e" path="res://assets/enemies/Norman_Normie.png" id="5_h22ju"]
[ext_resource type="Texture2D" uid="uid://b5sudbbnyfigj" path="res://assets/enemies/Skinny_Shroom_Walk_Cycle.png" id="6_4lupg"]
[ext_resource type="Shader" path="res://assets/shaders/sprite_shadow.gdshader" id="7_rjm08"]
[ext_resource type="Texture2D" uid="uid://pb7v3g38c3xa" path="res://assets/player/spores/Spore2.png" id="8_aorf7"]
[ext_resource type="Script" path="res://scripts/utility/ray_cast_2d.gd" id="9_450tu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5vnfe"]
atlas = ExtResource("2_k14k8")
region = Rect2(9000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_vs4n2"]
atlas = ExtResource("3_njl6j")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_watde"]
atlas = ExtResource("3_njl6j")
region = Rect2(1000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnu3w"]
atlas = ExtResource("3_njl6j")
region = Rect2(2000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovuyk"]
atlas = ExtResource("3_njl6j")
region = Rect2(3000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_xg38j"]
atlas = ExtResource("3_njl6j")
region = Rect2(4000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_vja1l"]
atlas = ExtResource("3_njl6j")
region = Rect2(5000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqfth"]
atlas = ExtResource("3_njl6j")
region = Rect2(6000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxe8b"]
atlas = ExtResource("3_njl6j")
region = Rect2(7000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_kveat"]
atlas = ExtResource("3_njl6j")
region = Rect2(8000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5rmq"]
atlas = ExtResource("3_njl6j")
region = Rect2(9000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_egpgn"]
atlas = ExtResource("3_njl6j")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_64lpn"]
atlas = ExtResource("3_njl6j")
region = Rect2(1000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_72wp6"]
atlas = ExtResource("3_njl6j")
region = Rect2(2000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4jnb"]
atlas = ExtResource("3_njl6j")
region = Rect2(3000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_neflk"]
atlas = ExtResource("3_njl6j")
region = Rect2(4000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7nvy"]
atlas = ExtResource("3_njl6j")
region = Rect2(5000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxm45"]
atlas = ExtResource("3_njl6j")
region = Rect2(6000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_ef7iy"]
atlas = ExtResource("3_njl6j")
region = Rect2(7000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqnfr"]
atlas = ExtResource("3_njl6j")
region = Rect2(8000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pc3h"]
atlas = ExtResource("3_njl6j")
region = Rect2(9000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_8x18s"]
atlas = ExtResource("4_6swk2")
region = Rect2(1000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_jg532"]
atlas = ExtResource("4_6swk2")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dae6"]
atlas = ExtResource("4_6swk2")
region = Rect2(1000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_gd7cs"]
atlas = ExtResource("4_6swk2")
region = Rect2(2000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnoc3"]
atlas = ExtResource("4_6swk2")
region = Rect2(3000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7jvm"]
atlas = ExtResource("4_6swk2")
region = Rect2(4000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbiut"]
atlas = ExtResource("4_6swk2")
region = Rect2(5000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmt6n"]
atlas = ExtResource("5_h22ju")
region = Rect2(3000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfx8p"]
atlas = ExtResource("5_h22ju")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_i263j"]
atlas = ExtResource("5_h22ju")
region = Rect2(1000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0hl1"]
atlas = ExtResource("5_h22ju")
region = Rect2(2000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_21iew"]
atlas = ExtResource("5_h22ju")
region = Rect2(3000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_g56j3"]
atlas = ExtResource("5_h22ju")
region = Rect2(4000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_uyd6a"]
atlas = ExtResource("5_h22ju")
region = Rect2(5000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_xa40i"]
atlas = ExtResource("6_4lupg")
region = Rect2(4000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gs3c"]
atlas = ExtResource("6_4lupg")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_vn4ax"]
atlas = ExtResource("6_4lupg")
region = Rect2(1000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_gimn4"]
atlas = ExtResource("6_4lupg")
region = Rect2(2000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckmsn"]
atlas = ExtResource("6_4lupg")
region = Rect2(3000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebwgl"]
atlas = ExtResource("6_4lupg")
region = Rect2(4000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_wo51d"]
atlas = ExtResource("6_4lupg")
region = Rect2(5000, 0, 1000, 1000)

[sub_resource type="SpriteFrames" id="SpriteFrames_e2ti2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vnfe")
}],
"loop": true,
"name": &"big_boi_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vs4n2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_watde")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnu3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovuyk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xg38j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vja1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqfth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxe8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kveat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5rmq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egpgn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_64lpn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72wp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4jnb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_neflk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7nvy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxm45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ef7iy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqnfr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pc3h")
}],
"loop": true,
"name": &"big_boi_jump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8x18s")
}],
"loop": true,
"name": &"gobbie_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jg532")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dae6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gd7cs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnoc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7jvm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbiut")
}],
"loop": true,
"name": &"gobbie_walk",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmt6n")
}],
"loop": true,
"name": &"normal_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfx8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i263j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0hl1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21iew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g56j3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uyd6a")
}],
"loop": true,
"name": &"normal_walk",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xa40i")
}],
"loop": true,
"name": &"skinny_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gs3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vn4ax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gimn4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckmsn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebwgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wo51d")
}],
"loop": true,
"name": &"skinny_walk",
"speed": 12.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iuygk"]
shader = ExtResource("7_rjm08")
shader_parameter/shadow_color = Color(0, 0, 0, 0.458824)

[sub_resource type="CircleShape2D" id="CircleShape2D_r6xwo"]
radius = 10.1348

[sub_resource type="CircleShape2D" id="CircleShape2D_6dcrf"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2p6qr"]
radius = 87.0057

[node name="enemy_tiny" type="CharacterBody2D" groups=["enemy"]]
z_index = 5
y_sort_enabled = true
collision_layer = 2049
collision_mask = 2049
motion_mode = 1
floor_stop_on_slope = false
floor_block_on_wall = false
platform_on_leave = 2
platform_floor_layers = 0
script = ExtResource("1_fgdk2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
scale = Vector2(0.0818452, 0.0818452)
sprite_frames = SubResource("SpriteFrames_e2ti2")
animation = &"gobbie_idle"
offset = Vector2(-0.94569, -147.564)

[node name="shadow" type="Sprite2D" parent="AnimatedSprite2D"]
z_index = -1
material = SubResource("ShaderMaterial_iuygk")
position = Vector2(-12.2182, 73.3091)
scale = Vector2(2.17101, 1.10998)
texture = ExtResource("8_aorf7")

[node name="MeleeAttackEffectiveRange" type="Area2D" parent="."]
visible = false
position = Vector2(-0.0774002, -0.0774002)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeleeAttackEffectiveRange"]
visible = false
shape = SubResource("CircleShape2D_r6xwo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_6dcrf")

[node name="Vision" type="Area2D" parent="."]
visible = false
position = Vector2(-0.0774002, -12.0774)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
position = Vector2(0, 12)
shape = SubResource("CircleShape2D_2p6qr")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true

[node name="RayCast2D" type="RayCast2D" parent="."]
visible = false
target_position = Vector2(0, 87)
script = ExtResource("9_450tu")

[connection signal="body_entered" from="MeleeAttackEffectiveRange" to="." method="_player_entered_attack_range"]
[connection signal="body_exited" from="MeleeAttackEffectiveRange" to="." method="_player_left_attack_range"]
[connection signal="body_entered" from="Vision" to="." method="_player_entered_vision"]
